[gd_scene load_steps=10 format=3 uid="uid://bpwfynnru0vry"]

[ext_resource type="Script" uid="uid://bijk8t6wr5u1v" path="res://residuos/MapParch3.gd" id="1_c1la6"]
[ext_resource type="Texture2D" uid="uid://7jh6116ytpdo" path="res://assets/textures/CameraBg.png" id="1_kn8l6"]
[ext_resource type="Texture2D" uid="uid://cgoccj0ccoucf" path="res://assets/textures/OfficeBackground.png" id="2_c1la6"]
[ext_resource type="Texture2D" uid="uid://e6gf0tudqohy" path="res://assets/textures/Minimap.png" id="3_i4pdb"]
[ext_resource type="Script" uid="uid://brtfby05qf8e7" path="res://scripts/Action/map_node_button.gd" id="5_c1la6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhpch"]
bg_color = Color(0.11216224, 0.20027915, 0.43604127, 0.49019608)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8xft1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xkmw3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vpwxn"]

[node name="MapParch3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c1la6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -0.9958496
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kn8l6")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 415.0
offset_top = 167.0
offset_right = -215.0
offset_bottom = -361.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c1la6")
expand_mode = 1

[node name="map" type="TextureRect" parent="TextureRect/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -248.00208
offset_right = 265.0
offset_bottom = 263.99792
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_i4pdb")

[node name="CamParch1" type="Button" parent="TextureRect/TextureRect2/map"]
layout_mode = 0
offset_left = 200.0
offset_top = 13.0
offset_right = 310.0
offset_bottom = 126.0
theme_override_styles/normal = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/focus = SubResource("StyleBoxFlat_mhpch")
disabled = true
script = ExtResource("5_c1la6")

[node name="CamParch2" type="Button" parent="TextureRect/TextureRect2/map"]
layout_mode = 0
offset_left = 93.0
offset_top = 127.0
offset_right = 206.0
offset_bottom = 240.0
theme_override_styles/normal = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/focus = SubResource("StyleBoxFlat_mhpch")
disabled = true
script = ExtResource("5_c1la6")

[node name="CamParch3" type="Button" parent="TextureRect/TextureRect2/map"]
layout_mode = 0
offset_left = 315.0
offset_top = 134.0
offset_right = 407.0
offset_bottom = 236.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_8xft1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xkmw3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_xkmw3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xkmw3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_xkmw3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xkmw3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_xkmw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xkmw3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xkmw3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xkmw3")
script = ExtResource("5_c1la6")

[node name="CamParch4" type="Button" parent="TextureRect/TextureRect2/map"]
layout_mode = 0
offset_left = 199.0
offset_top = 223.0
offset_right = 311.0
offset_bottom = 336.0
theme_override_styles/normal = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/focus = SubResource("StyleBoxFlat_mhpch")
disabled = true
script = ExtResource("5_c1la6")

[node name="CamParch5" type="Button" parent="TextureRect/TextureRect2/map"]
layout_mode = 0
offset_left = 382.0
offset_top = 255.0
offset_right = 494.0
offset_bottom = 368.0
theme_override_styles/normal = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_mhpch")
theme_override_styles/focus = SubResource("StyleBoxFlat_mhpch")
disabled = true
script = ExtResource("5_c1la6")

[node name="ProgressBar" type="ProgressBar" parent="TextureRect/TextureRect2/map"]
visible = false
layout_mode = 0
offset_left = 392.0
offset_top = 473.0
offset_right = 623.0
offset_bottom = 506.0
theme_override_font_sizes/font_size = 20

[node name="VolverMapParch3" type="Button" parent="TextureRect/TextureRect2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -794.0
offset_top = -259.00208
offset_right = -625.0
offset_bottom = -147.00208
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_vpwxn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vpwxn")
text = "X"

[connection signal="button_down" from="TextureRect/TextureRect2/map/CamParch3" to="TextureRect/TextureRect2/map/CamParch3" method="_on_button_down"]
[connection signal="button_up" from="TextureRect/TextureRect2/map/CamParch3" to="TextureRect/TextureRect2/map/CamParch3" method="_on_button_up"]
[connection signal="pressed" from="TextureRect/TextureRect2/VolverMapParch3" to="." method="_on_volver_map_parch_3_pressed"]
